--- a/careweb/templates/content.html
+++ b/careweb/templates/content.html
@@ -326,12 +326,12 @@
                         <div class="col-lg-5">
                             <div class="testimonialSlider owl-carousel">
                                 <div class="single-testimonials">
-                                    <img src="img/testimonial/testi-icon-1.png" class="testi-icon" alt="Awesome Image">
+                                    <img src="{% static 'img/testimonial/testi-icon-1.png' %}" class="testi-icon" alt="Awesome Image">
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                                         industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
                                     <div class="name-box-wrapper">
                                         <div class="img-box">
-                                            <img src="img/testimonial/reviewr1.jpg" alt="Awesome Image">
+                                            <img src="{% static 'img/testimonial/reviewr1.jpg' %}" alt="Awesome Image">
                                         </div>
                                         <div class="text-box">
                                             <h4>Hailey Olkowski</h4>
@@ -345,7 +345,7 @@
                                         industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
                                     <div class="name-box-wrapper">
                                         <div class="img-box">
-                                            <img src="img/testimonial/reviewr2.jpg" alt="Awesome Image">
+                                            <img src="{% static 'img/testimonial/reviewr2.jpg' %}" alt="Awesome Image">
                                         </div>
                                         <div class="text-box">
                                             <h4>Benny Talone</h4>
@@ -354,12 +354,12 @@
                                     </div>
                                 </div>
                                 <div class="single-testimonials">
-                                    <img src="img/testimonial/testi-icon-1.png" class="testi-icon" alt="Awesome Image">
+                                    <img src="{% static 'img/testimonial/testi-icon-1.png' %}" class="testi-icon" alt="Awesome Image">
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                                         industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
                                     <div class="name-box-wrapper">
                                         <div class="img-box">
-                                            <img src="img/testimonial/reviewr3.jpg" alt="Awesome Image">
+                                            <img src="{% static 'img/testimonial/reviewr3.jpg' %}" alt="Awesome Image">
                                         </div>
                                         <div class="text-box">
                                             <h4>Rigoberto Sweat</h4>
@@ -370,52 +370,52 @@
                             </div>
                         </div>
                         <div class="col-lg-6">
-                                                <div class="row partner-logo-wrapper">
-                                                        <div class="col-4 remove-col-padding partner-logos">
-                                                                <div class="single-logo-item"><!-- single logo item -->
-                                                                        <a href="#">
-                                                                                <img class="img-fluid" src="img/patner/patner1.png" alt="partner image">
-                                                                        </a>
-                                                                </div><!-- //.single logo item -->
-                                                        </div>
-                                                        <div class="col-4 remove-col-padding partner-logos">
-                                                                <div class="single-logo-item"><!-- single logo item -->
-                                                                        <a href="#">
-                                                                                <img class="img-fluid" src="img/patner/patner2.png" alt="partner image">
-                                                                        </a>
-                                                                </div><!-- //.single logo item -->
-                                                        </div>
-                                                        <div class="col-4  remove-col-padding partner-logos">
-                                                                <div class="single-logo-item"><!-- single logo item -->
-                                                                        <a href="#">
-                                                                                <img class="img-fluid" src="img/patner/patner3.png" alt="partner image">
-                                                                        </a>
-                                                                </div><!-- //.single logo item -->
-                                                        </div>
-                                                </div>
-                                                <div class="row partner-logo-wrapper">
-                                                        <div class="col-4 remove-col-padding partner-logos">
-                                                                <div class="single-logo-item"><!-- single logo item -->
-                                                                        <a href="#">
-                                                                                <img class="img-fluid" src="img/patner/patner4.png" alt="partner image">
-                                                                        </a>
-                                                                </div><!-- //.single logo item -->
-                                                        </div>
-                                                        <div class="col-4 remove-col-padding partner-logos">
-                                                                <div class="single-logo-item"><!-- single logo item -->
-                                                                        <a href="#">
-                                                                                <img class="img-fluid" src="img/patner/patner5.png" alt="partner image">
-                                                                        </a>
-                                                                </div><!-- //.single logo item -->
-                                                        </div>
-                                                        <div class="col-4 remove-col-padding partner-logos">
-                                                                <div class="single-logo-item"><!-- single logo item -->
-                                                                        <a href="#">
-                                                                                <img class="img-fluid" src="img/patner/patner6.png" alt="partner image">
-                                                                        </a>
-                                                                </div><!-- //.single logo item -->
-                                                        </div>
-                                                </div>
+                            <div class="row partner-logo-wrapper">
+                                <div class="col-4 remove-col-padding partner-logos">
+                                        <div class="single-logo-item"><!-- single logo item -->
+                                                <a href="#">
+                                                        <img class="img-fluid" src="img/patner/patner1.png" alt="partner image">
+                                                </a>
+                                        </div><!-- //.single logo item -->
+                                </div>
+                                <div class="col-4 remove-col-padding partner-logos">
+                                        <div class="single-logo-item"><!-- single logo item -->
+                                                <a href="#">
+                                                        <img class="img-fluid" src="img/patner/patner2.png" alt="partner image">
+                                                </a>
+                                        </div><!-- //.single logo item -->
+                                </div>
+                                <div class="col-4  remove-col-padding partner-logos">
+                                        <div class="single-logo-item"><!-- single logo item -->
+                                                <a href="#">
+                                                        <img class="img-fluid" src="img/patner/patner3.png" alt="partner image">
+                                                </a>
+                                        </div><!-- //.single logo item -->
+                                </div>
+                    </div>
+                    <div class="row partner-logo-wrapper">
+                            <div class="col-4 remove-col-padding partner-logos">
+                                    <div class="single-logo-item"><!-- single logo item -->
+                                            <a href="#">
+                                                    <img class="img-fluid" src="{% static 'img/patner/patner4.png' %}" alt="partner image">
+                                            </a>
+                                    </div><!-- //.single logo item -->
+                            </div>
+                            <div class="col-4 remove-col-padding partner-logos">
+                                    <div class="single-logo-item"><!-- single logo item -->
+                                            <a href="#">
+                                                    <img class="img-fluid" src="{% static 'img/patner/patner5.png' %}" alt="partner image">
+                                            </a>
+                                    </div><!-- //.single logo item -->
+                            </div>
+                            <div class="col-4 remove-col-padding partner-logos">
+                                    <div class="single-logo-item"><!-- single logo item -->
+                                            <a href="#">
+                                                    <img class="img-fluid" src="{% static 'img/patner/patner6.png' %}" alt="partner image">
+                                            </a>
+                                    </div><!-- //.single logo item -->
+                            </div>
+                    </div>
                         </div>
                 </div>
         </div>
