--- a/careweb/otherstatic/css/style.css
+++ b/careweb/otherstatic/css/style.css
@@ -994,6 +994,37 @@ Give And Take NumberSection End
 .historyBox li:last-child {
   margin-bottom: 0;
 }
+
+
+.historyBox .good i{
+  background-color: #0cdd03;
+}
+.historyBox .bad i{
+  background-color: #fb5427;
+}
+
+.historyBox .box i {
+  font-size: 20px;
+  color: #fff;
+  border-radius: 50%;
+  margin-right: 20px;
+  /*display: inline-block;*/
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.historyBox .good:hover i {
+  background-color: #055f01;
+}
+
+.historyBox .bad:hover i {
+  background-color: #bf2b03;
+}
 .v-box .overlay {
   position: absolute;
   top: 0;
