--- a/careweb/templates/footer.html
+++ b/careweb/templates/footer.html
@@ -5,7 +5,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="widget1">
                         <div class="logo">
-                            <img src="img/flogo.png" class="img-fluid" alt="">
+                            <img src="{% static 'img/futurecare2.png' %}" class="img-fluid" alt="">
                         </div>
                         <p>
                             In eu libero ligula. Fusce eget metus lorem, ac viverra
@@ -45,7 +45,7 @@
                             Latest News
                         </h5>
                         <div class="media">
-                            <img class="img-fluid" src="img/footerLatestNews/n1.jpg" alt="">
+                            <img class="img-fluid" src="{% static 'img/footerLatestNews/n1.jpg' %}" alt="">
                             <div class="media-body d-flex align-self-center">
                                 <div class="content">
                                     <a href="blogDetails.html">
@@ -60,7 +60,7 @@
                             </div>
                         </div>
                         <div class="media">
-                            <img class="img-fluid" src="img/footerLatestNews/n2.jpg" alt="">
+                            <img class="img-fluid" src="{% static 'img/footerLatestNews/n2.jpg' %}" alt="">
                             <div class="media-body d-flex align-self-center">
                                 <div class="content">
                                     <a href="blogDetails.html">
