resolved home page image

--- a/careweb/templates/content.html
+++ b/careweb/templates/content.html
@@ -2,11 +2,81 @@
 
     <!--Start Slider Area-->
     <section id="slider-area" class="slider-area">
+        <div class="overlay"></div>
+        <!--Start Slider-->
+        <div class="silder owl-carousel">
+            <!--Start Slide Item-->
+            <div class="slide-item" style="background-image: url({% static 'img/banner3.jpg' %})">
+                <div class="overlay"></div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                                <div class="slide-caption">
+                                        <div class="slider-inner">
+                                            <div class="innerSize">
+                                                <h1 class="caption-title">Insurances Do Matter</h1>
+                                                <p class="caption-desc">
+                                                    When an unknown printer took a galley of type and scrambled it to make a
+                                                    type specimen book. It has survived not only five centuries, but also the
+                                                    leap into electronic typesetting, remaining essentially unchanged.
+                                                </p>
+                                                <div class="slide-btn">
+                                                    <a class="mybtn" href="#about">Learn More</a>
+                                                        <a class="venobox video-icon-btn" data-vbtype="video" data-autoplay="true" href="http://vimeo.com/75976293">
+                                                            <i class="fa fa-play"></i><span>Intro Video</span>
+                                                        </a>
+                                                        <!-- <p class="videoText"></p> -->
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--End Slide Item-->
+
+            <!--Start Slide Item-->
+            <div class="slide-item" style="background-image: url({% static 'img/banner7.jpg' %})">
+                <div class="overlay"></div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                                <div class="slide-caption">
+                                        <div class="slider-inner">
+                                            <div class="innerSize">
+                                                <h1 class="caption-title">Insurances Do Matter</h1>
+                                                <p class="caption-desc">
+                                                    When an unknown printer took a galley of type and scrambled it to make a
+                                                    type specimen book. It has survived not only five centuries, but also the
+                                                    leap into electronic typesetting, remaining essentially unchanged.
+                                                </p>
+                                                <div class="slide-btn">
+                                                    <a class="mybtn" href="#about">Learn More</a>
+                                                    <a class="venobox video-icon-btn" data-vbtype="video" data-autoplay="true" href="http://vimeo.com/75976293">
+                                                        <i class="fa fa-play"></i><span>INTRO VIDEO</span>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--End Slide Item-->
+        </div>
+        <!--End Slider-->
+    </section>
+    <!--End Slider Area-->
+{% comment %}
+    <!--Start Slider Area-->
+    <section id="slider-area" class="slider-area">
         <!--<div class="overlay"></div>-->
         <!--Start Slider owl-carousel-->
         <div class="silder">
             <!--Start Slide Item-->
-            <div class="slide-item" style="background-image: url({% static 'img/banner3.jpg' %})">
+            <div class="slide-item" style="background-image: url({% static 'img/banner8.jpg' %})">
                 <div class="overlay"></div><!-- -->
 
                 <div class="container">
@@ -43,7 +113,7 @@
         <!--End Slider-->
     </section>
     <!--End Slider Area-->
-
+{% endcomment %}
 
     <!-- Services Area Start -->
     <section id="service" class="service">
@@ -203,112 +273,112 @@
 <!-- History Section Area Start -->
     <section id="history" class="history">
         <div class="container">
-                <div class="row justify-content-center">
-                        <div class="col-lg-8 col-md-10">
-                            <div class="sectionHeader">
-                                <h2>
-                                    Our History
-                                </h2>
-                                
-                                <p>
-                                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                                    the book type of spaciman and scrambled it to make a type specimen book.
-                                </p>
-                            </div>
-                        </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-8 col-md-10">
+                    <div class="sectionHeader">
+                        <h2>
+                            Our History
+                        </h2>
+                        
+                        <p>
+                            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                            the book type of spaciman and scrambled it to make a type specimen book.
+                        </p>
                     </div>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="v-box">
-                            <img class="img-fluid" src="img/history.jpg" alt="">
-                            <a class="venobox" data-vbtype="video" data-autoplay="true" href="http://youtu.be/d85gkOXeXG4">
-                                <i class="fas fa-play"></i>
-                            </a>
-                            <div class="overlay"></div>
-                        </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="v-box">
+                        <img class="img-fluid" src="img/history.jpg" alt="">
+                        <a class="venobox" data-vbtype="video" data-autoplay="true" href="http://youtu.be/d85gkOXeXG4">
+                            <i class="fas fa-play"></i>
+                        </a>
+                        <div class="overlay"></div>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="historyBox">
-                            <ul>
-                                <li>
-                                    <div class="content">
-                                            <div class="left">
-                                                    <span></span>
-                                                </div>
-                                                <div class="right">
-                                                    <a href="#">
-                                                            2015 - Start Story
-                                                    </a>
-                                                    <p>
-                                                            When an unknown printer took a galley of type and scrambled it to make a
-                                                            type specimen book. It has survived not only five centuries
-                                                    </p>
-                                                </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="historyBox">
+                        <ul>
+                            <li>
+                                <div class="content">
+                                    <div class="left">
+                                        <span></span>
                                     </div>
-                                </li>
-                                <li>
-                                    <div class="content">
-                                            <div class="left">
-                                                    <span></span>
-                                                </div>
-                                                <div class="right">
-                                                    <a href="#">
-                                                            2016 - 7+ Awards
-                                                    </a>
-                                                    <p>
-                                                            When an unknown printer took a galley of type and scrambled it to make a
-                                                            type specimen book. It has survived not only five centuries
-                                                    </p>
-                                                </div>
+                                    <div class="right">
+                                        <a href="#">
+                                                2015 - Start Story
+                                        </a>
+                                        <p>
+                                                When an unknown printer took a galley of type and scrambled it to make a
+                                                type specimen book. It has survived not only five centuries
+                                        </p>
                                     </div>
-                                </li>
-                                <li>
-                                    <div class="content">
-                                            <div class="left">
-                                                    <span></span>
-                                                </div>
-                                                <div class="right">
-                                                    <a href="#">
-                                                            2017 - 9M Holders
-                                                    </a>
-                                                    <p>
-                                                            When an unknown printer took a galley of type and scrambled it to make a
-                                                            type specimen book. It has survived not only five centuries
-                                                    </p>
-                                                </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="content">
+                                    <div class="left">
+                                        <span></span>
                                     </div>
-                                </li>
-                                <li>
-                                    <div class="content">
-                                            <div class="left">
-                                                    <span></span>
-                                                </div>
-                                                <div class="right">
-                                                    <a href="#">
-                                                            2019 - 18 Records
-                                                    </a>
-                                                    <p>
-                                                            When an unknown printer took a galley of type and scrambled it to make a
-                                                            type specimen book. It has survived not only five centuries
-                                                    </p>
-                                                </div>
+                                    <div class="right">
+                                        <a href="#">
+                                                2016 - 7+ Awards
+                                        </a>
+                                        <p>
+                                                When an unknown printer took a galley of type and scrambled it to make a
+                                                type specimen book. It has survived not only five centuries
+                                        </p>
                                     </div>
-                                </li>
-                                <li>
-                                    <div class="content">
-                                            <div class="left">
-                                                    <span></span>
-                                                </div>
-                                                <div class="right">
-                                                    <a href="#">
-                                                        2019 - 8+ Awards
-                                                    </a>
-                                                    <p>
-                                                            When an unknown printer took a galley of type and scrambled it to make a
-                                                            type specimen book. It has survived not only five centuries
-                                                    </p>
-                                                </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="content">
+                                    <div class="left">
+                                        <span></span>
                                     </div>
+                                    <div class="right">
+                                        <a href="#">
+                                                2017 - 9M Holders
+                                        </a>
+                                        <p>
+                                                When an unknown printer took a galley of type and scrambled it to make a
+                                                type specimen book. It has survived not only five centuries
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="content">
+                                    <div class="left">
+                                        <span></span>
+                                    </div>
+                                    <div class="right">
+                                        <a href="#">
+                                                2019 - 18 Records
+                                        </a>
+                                        <p>
+                                                When an unknown printer took a galley of type and scrambled it to make a
+                                                type specimen book. It has survived not only five centuries
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="content">
+                                    <div class="left">
+                                        <span></span>
+                                    </div>
+                                    <div class="right">
+                                        <a href="#">
+                                            2019 - 8+ Awards
+                                        </a>
+                                        <p>
+                                                When an unknown printer took a galley of type and scrambled it to make a
+                                                type specimen book. It has survived not only five centuries
+                                        </p>
+                                    </div>
+                                </div>
                                 </li>
                             </ul>
                         </div>
