--- a/careweb/otherstatic/css/style.css
+++ b/careweb/otherstatic/css/style.css
@@ -978,6 +978,16 @@ Give And Take NumberSection End
   font-family: "Montserrat", sans-serif;
 }
 
+
+.serviceDetails .historyBox a {
+  font-size: 17px;
+  color: #333;
+  font-weight: 600;
+  margin-bottom: 10px;
+  display: block;
+  line-height: 32px;
+  font-family: "Montserrat", sans-serif;
+}
 .historyBox a:hover {
   color: #9fde50;
 }
@@ -997,33 +1007,35 @@ Give And Take NumberSection End
 
 
 .historyBox .good i{
-  background-color: #0cdd03;
+  color: #0cdd03;
 }
 .historyBox .bad i{
-  background-color: #fb5427;
+  color: #fb5427;
 }
 
 .historyBox .box i {
-  font-size: 20px;
-  color: #fff;
+  font-size: 35px;
+  font-weight: bold;
+  /*color: #fff;*/
   border-radius: 50%;
   margin-right: 20px;
   /*display: inline-block;*/
-  width: 40px;
-  height: 40px;
+  /*width: 40px;*/
+  /*height: 40px;*/
   text-align: center;
-  line-height: 40px;
+  /*line-height: 40px;*/
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 
 .historyBox .good:hover i {
-  background-color: #055f01;
+  color: #055f01;
+  /*background-color:;*/
 }
 
 .historyBox .bad:hover i {
-  background-color: #bf2b03;
+  color: #bf2b03;
 }
 .v-box .overlay {
   position: absolute;
