--- a/careweb/templates/footer.html
+++ b/careweb/templates/footer.html
@@ -5,7 +5,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="widget1">
                         <div class="logo">
-                            <img src="{% static 'img/f-futurecare.png' %}" class="img-fluid" alt="">
+                            <img src="{% static 'img/f1-futurecare.png' %}" class="img-fluid" alt="">
                         </div>
                         <p>
                             In eu libero ligula. Fusce eget metus lorem, ac viverra
